fix: fixed overflow inconversation list bar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,14 @@
     font-family: "Outfit", sans-serif;
 }
 
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .title{
     font-family: "Finlandica Headline", sans-serif;
 }
